--- a/vault.ipynb
+++ b/vault.ipynb
@@ -210,20 +210,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "metadata": {
         "id": "O7pJLds6C4gq"
       },
       "outputs": [],
       "source": [
-        "def hidden_init(layer):\n",
-        "    fan_in = layer.weight.data.size()[0]\n",
-        "    lim = 1. / np.sqrt(fan_in)\n",
-        "    return (-lim, lim)\n",
-        "\n",
         "class Actor(nn.Module):\n",
         "\n",
-        "    def __init__(self, state_size, action_size, max_action, seed, l1=400, l2=300):\n",
+        "    def __init__(self, state_size, action_size, max_action, l1=400, l2=300):\n",
         "        super(Actor, self).__init__()\n",
         "\n",
         "        self.l1 = nn.Linear(state_size, l1)\n",
@@ -239,7 +234,7 @@
         "        return action\n",
         "\n",
         "class Critic(nn.Module):\n",
-        "    def __init__(self, state_dim, action_dim, seed, l1=400, l2=300):\n",
+        "    def __init__(self, state_dim, action_dim, l1=400, l2=300):\n",
         "        super(Critic, self).__init__()\n",
         "\n",
         "        self.l1 = nn.Linear(state_dim + action_dim, l1)\n",
@@ -278,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {
         "id": "v3Cd3SiWC5Y5"
       },
@@ -312,13 +307,13 @@
         "        self.noise_clip = noise_clip\n",
         "\n",
         "        # Actor Network (w/ Target Network)\n",
-        "        self.actor = Actor(state_size, action_size, float(max_action[0]), random_seed).to(device)\n",
-        "        self.actor_target = Actor(state_size, action_size, float(max_action[0]), random_seed).to(device)\n",
+        "        self.actor = Actor(state_size, action_size, float(max_action[0])).to(device)\n",
+        "        self.actor_target = Actor(state_size, action_size, float(max_action[0])).to(device)\n",
         "        self.actor_optimizer = optim.Adam(self.actor.parameters(), lr=LR_ACTOR)\n",
         "\n",
         "        # Critic Network (w/ Target Network)\n",
-        "        self.critic = Critic(state_size, action_size, random_seed).to(device)\n",
-        "        self.critic_target = Critic(state_size, action_size, random_seed).to(device)\n",
+        "        self.critic = Critic(state_size, action_size).to(device)\n",
+        "        self.critic_target = Critic(state_size, action_size).to(device)\n",
         "        self.critic_target.load_state_dict(self.critic.state_dict())\n",
         "        self.critic_optimizer = optim.Adam(self.critic.parameters(), lr=LR_CRITIC)\n",
         "\n",
@@ -452,13 +447,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q9tSI3g3C9K0",
-        "outputId": "a59ab832-556a-4706-a381-048557243c7f"
+        "outputId": "f6882435-bbe0-479a-bdb2-59f217f876fb"
       },
       "outputs": [
         {
@@ -474,7 +469,7 @@
       ],
       "source": [
         "import gymnasium as gym\n",
-        "env = gym.make(\"BipedalWalker-v3\")\n",
+        "env = gym.make(\"BipedalWalker-v3\", hardcore=True)\n",
         "\n",
         "# tamanho de cada ação\n",
         "action_size = env.action_space\n",
@@ -501,24 +496,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493,
           "referenced_widgets": [
-            "b69214b87ead4a4286a6c9de01edc08b",
-            "924d5c11570842838eb195466ecabf9f",
-            "bc1a7ea7261c488a87ed5b7b4c898c3f",
-            "4dc5ed34b1a94652a66a96e185bc19ec",
-            "2bcf356025e540a1b5f372fcffdd040d",
-            "efd8a533c7374341ba1186800c74cb63",
-            "a7bb1a09f351488d9634a6fda46897b5",
-            "41c81c9fdcf64e8fa1c07a80e38a57c8"
+            "9f0c90394dc545e1a036d108e7cfa1fd",
+            "1cb43ecead30414e8636a0e773d90bcf",
+            "305769d2049547fc84c1a0fc4fd1f16b",
+            "bfcb84944dbf46b687e2c58c1240b863",
+            "e41ed5243e3044a6a22b0fb5195300a0",
+            "ec916a290d164ed5aeb4926f49a28cf9",
+            "f1d865e333164314a847884045d8e4bf",
+            "a218779fe7fd4aefa6089871e981abe2"
           ]
         },
         "id": "RVNLbR1PNH44",
-        "outputId": "6eabff15-9154-47d1-d5d3-3f727395f989"
+        "outputId": "8cb061e5-eb31-49c9-a5a5-577a28774f78"
       },
       "outputs": [
         {
@@ -528,7 +523,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Finishing last run (ID:y1lhczey) before initializing another..."
+              "Finishing last run (ID:5ubs1zm7) before initializing another..."
             ]
           },
           "metadata": {}
@@ -549,12 +544,12 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "VBox(children=(Label(value='0.001 MB of 0.003 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=0.400783…"
+              "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
             ],
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "b69214b87ead4a4286a6c9de01edc08b"
+              "model_id": "9f0c90394dc545e1a036d108e7cfa1fd"
             }
           },
           "metadata": {}
@@ -571,7 +566,7 @@
               "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
               "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
               "    </style>\n",
-              "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Average Q</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▂▂▂▂▃▄▄▄▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▆▆▇█</td></tr><tr><td>Max. Q</td><td>▁▂▂▂▂▂▂▂▂▂▃▃▃▃▆▅▇▇▆▆▇▇▇▇▇▇▇▇▇███▇█▇▇█▇██</td></tr><tr><td>loss</td><td>▁▁█▂▃▃▁▃▂▁▂▅▂▂▅█▅▃▃▂▃▅▄▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▂▂</td></tr><tr><td>score</td><td>▁▄▅▅▅▆▆▆▆▆▆▆▅▄▃▃▃▃▃▄▄▅▆▆▇▇█▇▅▅▄▄▅▄▄▅▅▆▇▅</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Average Q</td><td>29.9844</td></tr><tr><td>Max. Q</td><td>46.70114</td></tr><tr><td>loss</td><td>1.91763</td></tr><tr><td>score</td><td>-108.87742</td></tr></table><br/></div></div>"
+              "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Average Q</td><td>▁▂▂▂▂▂▃▂▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▄▄▅▆▇███</td></tr><tr><td>Max. Q</td><td>▁▂▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▅▅▅▄▅▅▅▅▆▄▅▅▅▅▅▅▆██▇▆▆▆</td></tr><tr><td>loss</td><td>█▂▁▁▁▁▁▁▁▂▁▂▂▁▁▁▁▁▂▂▂▂▂▁▁▁▁▁▁▁▂▂▂▂▂▂▂▁▂▂</td></tr><tr><td>score</td><td>▄▁▂▃▃▅▅▅▄▃▃▄▃▃▂▂▃▄▅▄▄▄▄▅▅▆▆▇█▇▆▅▃▃▃▂▃▃▃▄</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Average Q</td><td>22.94519</td></tr><tr><td>Max. Q</td><td>37.44434</td></tr><tr><td>loss</td><td>2.22456</td></tr><tr><td>score</td><td>-115.57354</td></tr></table><br/></div></div>"
             ]
           },
           "metadata": {}
@@ -583,7 +578,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run <strong style=\"color:#cdcd00\">effortless-bird-25</strong> at: <a href='https://wandb.ai/grottimeireles/td3/runs/y1lhczey' target=\"_blank\">https://wandb.ai/grottimeireles/td3/runs/y1lhczey</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+              " View run <strong style=\"color:#cdcd00\">ancient-terrain-26</strong> at: <a href='https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7' target=\"_blank\">https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
             ]
           },
           "metadata": {}
@@ -595,7 +590,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Find logs at: <code>./wandb/run-20231028_183830-y1lhczey/logs</code>"
+              "Find logs at: <code>./wandb/run-20231028_194004-5ubs1zm7/logs</code>"
             ]
           },
           "metadata": {}
@@ -607,7 +602,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Successfully finished last run (ID:y1lhczey). Initializing new run:<br/>"
+              "Successfully finished last run (ID:5ubs1zm7). Initializing new run:<br/>"
             ]
           },
           "metadata": {}
@@ -631,7 +626,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20231028_194004-5ubs1zm7</code>"
+              "Run data is saved locally in <code>/content/wandb/run-20231028_205732-0c206u52</code>"
             ]
           },
           "metadata": {}
@@ -643,7 +638,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7' target=\"_blank\">ancient-terrain-26</a></strong> to <a href='https://wandb.ai/grottimeireles/td3' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+              "Syncing run <strong><a href='https://wandb.ai/grottimeireles/td3/runs/0c206u52' target=\"_blank\">effortless-lake-27</a></strong> to <a href='https://wandb.ai/grottimeireles/td3' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
             ]
           },
           "metadata": {}
@@ -667,7 +662,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run at <a href='https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7' target=\"_blank\">https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7</a>"
+              " View run at <a href='https://wandb.ai/grottimeireles/td3/runs/0c206u52' target=\"_blank\">https://wandb.ai/grottimeireles/td3/runs/0c206u52</a>"
             ]
           },
           "metadata": {}
@@ -676,14 +671,14 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-              "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/grottimeireles/td3/runs/5ubs1zm7?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+              "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/grottimeireles/td3/runs/0c206u52?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
             ],
             "text/plain": [
-              "<wandb.sdk.wandb_run.Run at 0x7f1beb016f80>"
+              "<wandb.sdk.wandb_run.Run at 0x7f1c34086ad0>"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 26
         }
       ],
       "source": [
@@ -700,19 +695,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ERQ6QREQC99V",
-        "outputId": "9764a255-46d2-4adb-8b0d-d7d28baa4e46"
+        "outputId": "f67ae506-9026-4e2a-c171-b1057a2c3e7b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 100\tAverage Score: -124.36\n",
-            "Episode 200\tAverage Score: -117.73\n",
-            "Episode 300\tAverage Score: -122.95\n",
-            "Episode 400\tAverage Score: -128.60\n",
-            "Episode 500\tAverage Score: -114.82\n",
-            "Episode 589\tAverage Score: -110.44\tScore: -117.64"
+            "Episode 100\tAverage Score: -104.91\n",
+            "Episode 200\tAverage Score: -114.78\n",
+            "Episode 300\tAverage Score: -112.16\n",
+            "Episode 346\tAverage Score: -114.56\tScore: -132.29"
           ]
         }
       ],
@@ -1110,7 +1103,7 @@
       ],
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM6XTs5Qcnfvq4KF0iMM0si",
+      "authorship_tag": "ABX9TyMxnJD1OfnrEjK7fs0EzASU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1122,7 +1115,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "b69214b87ead4a4286a6c9de01edc08b": {
+        "9f0c90394dc545e1a036d108e7cfa1fd": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -1137,13 +1130,13 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_924d5c11570842838eb195466ecabf9f",
-              "IPY_MODEL_bc1a7ea7261c488a87ed5b7b4c898c3f"
+              "IPY_MODEL_1cb43ecead30414e8636a0e773d90bcf",
+              "IPY_MODEL_305769d2049547fc84c1a0fc4fd1f16b"
             ],
-            "layout": "IPY_MODEL_4dc5ed34b1a94652a66a96e185bc19ec"
+            "layout": "IPY_MODEL_bfcb84944dbf46b687e2c58c1240b863"
           }
         },
-        "924d5c11570842838eb195466ecabf9f": {
+        "1cb43ecead30414e8636a0e773d90bcf": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "LabelModel",
           "model_module_version": "1.5.0",
@@ -1158,13 +1151,13 @@
             "_view_name": "LabelView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_2bcf356025e540a1b5f372fcffdd040d",
+            "layout": "IPY_MODEL_e41ed5243e3044a6a22b0fb5195300a0",
             "placeholder": "​",
-            "style": "IPY_MODEL_efd8a533c7374341ba1186800c74cb63",
-            "value": "0.001 MB of 0.011 MB uploaded (0.000 MB deduped)\r"
+            "style": "IPY_MODEL_ec916a290d164ed5aeb4926f49a28cf9",
+            "value": "0.002 MB of 0.011 MB uploaded (0.000 MB deduped)\r"
           }
         },
-        "bc1a7ea7261c488a87ed5b7b4c898c3f": {
+        "305769d2049547fc84c1a0fc4fd1f16b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -1180,15 +1173,15 @@
             "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_a7bb1a09f351488d9634a6fda46897b5",
+            "layout": "IPY_MODEL_f1d865e333164314a847884045d8e4bf",
             "max": 1,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_41c81c9fdcf64e8fa1c07a80e38a57c8",
-            "value": 0.10370745714044421
+            "style": "IPY_MODEL_a218779fe7fd4aefa6089871e981abe2",
+            "value": 0.20824915824915824
           }
         },
-        "4dc5ed34b1a94652a66a96e185bc19ec": {
+        "bfcb84944dbf46b687e2c58c1240b863": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1240,7 +1233,7 @@
             "width": null
           }
         },
-        "2bcf356025e540a1b5f372fcffdd040d": {
+        "e41ed5243e3044a6a22b0fb5195300a0": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1292,7 +1285,7 @@
             "width": null
           }
         },
-        "efd8a533c7374341ba1186800c74cb63": {
+        "ec916a290d164ed5aeb4926f49a28cf9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1307,7 +1300,7 @@
             "description_width": ""
           }
         },
-        "a7bb1a09f351488d9634a6fda46897b5": {
+        "f1d865e333164314a847884045d8e4bf": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1359,7 +1352,7 @@
             "width": null
           }
         },
-        "41c81c9fdcf64e8fa1c07a80e38a57c8": {
+        "a218779fe7fd4aefa6089871e981abe2": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
