--- a/vault.ipynb
+++ b/vault.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "PhKTN31AC0QQ"
       },
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "-PIsAAovC3pL"
       },
@@ -210,22 +210,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "O7pJLds6C4gq"
       },
       "outputs": [],
       "source": [
+        "def hidden_init(layer):\n",
+        "    fan_in = layer.weight.data.size()[0]\n",
+        "    lim = 1. / np.sqrt(fan_in)\n",
+        "    return (-lim, lim)\n",
+        "\n",
         "class Actor(nn.Module):\n",
         "\n",
-        "    def __init__(self, state_size, action_size, max_action, l1=400, l2=300):\n",
+        "    def __init__(self, state_size, action_size, max_action, seed, l1=400, l2=300):\n",
         "        super(Actor, self).__init__()\n",
+        "        self.seed = torch.manual_seed(seed)\n",
         "\n",
         "        self.l1 = nn.Linear(state_size, l1)\n",
         "        self.l2 = nn.Linear(l1, l2)\n",
         "        self.l3 = nn.Linear(l2, action_size)\n",
+        "        self.reset_parameters()\n",
         "\n",
         "        self.max_action = max_action\n",
+        "\n",
+        "    def reset_parameters(self):\n",
+        "        self.l1.weight.data.uniform_(*hidden_init(self.l1))\n",
+        "        self.l2.weight.data.uniform_(*hidden_init(self.l2))\n",
+        "        self.l3.weight.data.uniform_(-3e-3, 3e-3)\n",
         "\n",
         "    def forward(self, state):\n",
         "        x = F.relu(self.l1(state))\n",
@@ -234,18 +246,33 @@
         "        return action\n",
         "\n",
         "class Critic(nn.Module):\n",
-        "    def __init__(self, state_dim, action_dim, l1=400, l2=300):\n",
+        "    def __init__(self, state_dim, action_dim, seed, l1=400, l2=300):\n",
         "        super(Critic, self).__init__()\n",
+        "        self.seed = torch.manual_seed(seed)\n",
         "\n",
         "        self.l1 = nn.Linear(state_dim + action_dim, l1)\n",
         "        self.l2 = nn.Linear(l1, l2)\n",
         "        self.l3 = nn.Linear(action_dim, l2)\n",
         "        self.l4 = nn.Linear(l2, 1)\n",
+        "        self.reset_parameters_q1()\n",
         "\n",
         "        self.l5 = nn.Linear(state_dim + action_dim, l1)\n",
         "        self.l6 = nn.Linear(l1, l2)\n",
         "        self.l7 = nn.Linear(action_dim, l2)\n",
         "        self.l8 = nn.Linear(l2, 1)\n",
+        "        self.reset_parameters_q2()\n",
+        "\n",
+        "    def reset_parameters_q1(self):\n",
+        "        self.l1.weight.data.uniform_(*hidden_init(self.l1))\n",
+        "        self.l2.weight.data.uniform_(*hidden_init(self.l2))\n",
+        "        self.l3.weight.data.uniform_(*hidden_init(self.l3))\n",
+        "        self.l4.weight.data.uniform_(-3e-3, 3e-3)\n",
+        "\n",
+        "    def reset_parameters_q2(self):\n",
+        "        self.l5.weight.data.uniform_(*hidden_init(self.l5))\n",
+        "        self.l6.weight.data.uniform_(*hidden_init(self.l6))\n",
+        "        self.l7.weight.data.uniform_(*hidden_init(self.l7))\n",
+        "        self.l8.weight.data.uniform_(-3e-3, 3e-3)\n",
         "\n",
         "    def forward(self, state, action):\n",
         "\n",
@@ -255,11 +282,11 @@
         "        s1 = s1 + a1\n",
         "        q1 = self.l4(s1)\n",
         "\n",
-        "        s2 = F.relu(self.l1(torch.cat([state, action], dim=1)))\n",
-        "        s2 = F.relu(self.l2(s2))\n",
-        "        a2 = F.relu(self.l3(action))\n",
+        "        s2 = F.relu(self.l5(torch.cat([state, action], dim=1)))\n",
+        "        s2 = F.relu(self.l6(s2))\n",
+        "        a2 = F.relu(self.l7(action))\n",
         "        s2 = s2 + a2\n",
-        "        q2 = self.l4(s2)\n",
+        "        q2 = self.l8(s2)\n",
         "        return q1, q2\n",
         "\n",
         "    def Q1(self, state, action):\n",
@@ -273,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "v3Cd3SiWC5Y5"
       },
@@ -447,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -496,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1103,7 +1130,7 @@
       ],
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMxnJD1OfnrEjK7fs0EzASU",
+      "authorship_tag": "ABX9TyMZj/zUpt0qfYO2J3ksxW09",
       "include_colab_link": true
     },
     "kernelspec": {
