--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -29,15 +29,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QdruBNVvMQ08",
-        "outputId": "19c3309d-749f-4913-e9ae-4a6442daf17e"
+        "outputId": "9a47fb2e-c617-4f8e-ca57-1aaab50b2a1b"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: line 1: nvidia-smi: command not found\n"
+            "Thu May 30 01:35:22 2024       \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
+            "|-----------------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                      |               MIG M. |\n",
+            "|=========================================+======================+======================|\n",
+            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   41C    P8               9W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                            |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+            "|        ID   ID                                                             Usage      |\n",
+            "|=======================================================================================|\n",
+            "|  No running processes found                                                           |\n",
+            "+---------------------------------------------------------------------------------------+\n"
           ]
         }
       ]
@@ -57,6 +76,16 @@
       ],
       "metadata": {
         "id": "iSmLN3pgE2Fu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Notes**\n",
+        "* Use Apex ? -> memory"
+      ],
+      "metadata": {
+        "id": "bQX-W5hEHOKv"
       }
     },
     {
@@ -234,9 +263,9 @@
         "!pip install gymnasium\n",
         "!pip install gymnasium[box2d]\n",
         "\n",
-        "!pip install torch\n",
-        "!pip install matplotlib\n",
-        "!pip install numpy\n",
+        "# !pip install torch\n",
+        "# !pip install matplotlib\n",
+        "# !pip install numpy\n",
         "!pip install wandb"
       ]
     },
@@ -248,6 +277,23 @@
       "metadata": {
         "id": "BwxK-YPh0EKc"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# debug memory cuda\n",
+        "os.environ[\"PYTORCH_NO_CUDA_MEMORY_CACHING\"] = \"1\"\n",
+        "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:128,garbage_collection_threshold:0.8\"\n",
+        "\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True"
+      ],
+      "metadata": {
+        "id": "jsiky7ygIE38"
+      },
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -264,15 +310,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JjrS5wB7AOfA",
-        "outputId": "9b3ab0be-4d2d-4095-8f2a-ec53d5948aff"
+        "outputId": "6dfcc66a-2f7b-4068-9c20-22e1f45d6ebd"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch version: 2.2.1+cu121\n"
+            "torch version: 2.3.0+cu121\n"
           ]
         }
       ]
@@ -312,15 +358,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rFiWTJo9CzSf",
-        "outputId": "fbb9707c-3a52-4afb-b651-5bd8361a7eb5"
+        "outputId": "b0c1d2de-55b1-493b-b0fc-6c4a6e631974"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "PyTorch couldn't find a GPU, to leverage the best of PyTorch 2.0, you should connect to a GPU.\n"
+            "GPU name: Tesla_T4\n",
+            "GPU capability score: (7, 5)\n",
+            "GPU score lower than (8, 0), PyTorch 2.x speedup features will be limited (PyTorch 2.x speedups happen most on newer GPUs).\n",
+            "GPU information:\n",
+            "Thu May 30 01:40:08 2024       \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
+            "|-----------------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                      |               MIG M. |\n",
+            "|=========================================+======================+======================|\n",
+            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   36C    P8               9W /  70W |      3MiB / 15360MiB |      0%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                            |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+            "|        ID   ID                                                             Usage      |\n",
+            "|=======================================================================================|\n",
+            "|  No running processes found                                                           |\n",
+            "+---------------------------------------------------------------------------------------+\n"
           ]
         }
       ]
@@ -341,15 +410,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "13d_P3rnC1HJ",
-        "outputId": "4aa4873b-253d-404c-8959-065b43a59d9c"
+        "outputId": "5cb0be02-b3e4-4948-97b6-3f4e91a06f1f"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please check that you have an NVIDIA GPU and installed a driver from \n"
+            "Total free GPU memory: 15.728 GB\n",
+            "Total GPU memory: 15.836 GB\n"
           ]
         }
       ]
@@ -367,24 +437,35 @@
         "    BATCH_SIZE = 32\n",
         "    print(f\"GPU memory available is {total_free_gpu_memory_gb} GB, using batch size of {BATCH_SIZE}\")\n",
         "except:\n",
-        "  BATCH_SIZE = 32"
+        "  BATCH_SIZE = 32 # minibatch size"
       ],
       "metadata": {
-        "id": "Y2qHR2UKDojx"
+        "id": "Y2qHR2UKDojx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de233977-fca3-469a-973a-3ac7d0179ab8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU memory available is 15.728 GB, using batch size of 32\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "HH0qgyzCC1r7"
       },
       "outputs": [],
       "source": [
         "BUFFER_SIZE = int(1e5)  # replay buffer size\n",
-        "BATCH_SIZE = 100        # minibatch size\n",
         "GAMMA = 0.99            # discount factor\n",
         "TAU = 1e-3              # for soft update of target parameters\n",
         "LR_ACTOR = 1e-3         # learning rate of the actor\n",
@@ -430,11 +511,6 @@
         "            reward (np.float64): agent reward\n",
         "            next_state (np.ndarray): agent next_state\n",
         "        \"\"\"\n",
-        "\n",
-        "        assert isinstance(state, np.ndarray), \"State is not of data structure (np.ndarray) in REPLAY BUFFER -> state: {}.\".format(type(state))\n",
-        "        assert isinstance(action, np.ndarray), \"Action is not of data structure (np.ndarray) in REPLAY BUFFER -> action: {}.\".format(type(action))\n",
-        "        assert isinstance(next_state, np.ndarray), \"Next State is not of data structure (np.ndarray) in REPLAY BUFFER -> next state: {}.\".format(type(next_state))\n",
-        "\n",
         "        assert isinstance(state[0], np.float32), \"State is not of type (np.float32) in REPLAY BUFFER -> state type: {}.\".format(type(state))\n",
         "        assert isinstance(action[0], np.float32), \"Action is not of type (np.float32) in REPLAY BUFFER -> action type: {}.\".format(type(action))\n",
         "        assert isinstance(reward, (int, np.float64)), \"Reward is not of type (np.float64 / int) in REPLAY BUFFER -> reward: {}.\".format(type(reward))\n",
@@ -491,23 +567,10 @@
         "        return len(self.memory)"
       ],
       "metadata": {
-        "id": "Eqt5PjlK6aAQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6376e05e-1df5-44e8-d1fb-a708923513fb"
+        "id": "Eqt5PjlK6aAQ"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-            "  and should_run_async(code)\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -520,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "O7pJLds6C4gq"
       },
@@ -655,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "v3Cd3SiWC5Y5"
       },
@@ -801,6 +864,10 @@
         "                Q1_expected, Q2_expected = self.critic(state, action)\n",
         "                critic_loss = F.mse_loss(Q1_expected, Q_targets) + F.mse_loss(Q2_expected, Q_targets)\n",
         "\n",
+        "                ###################\n",
+        "                # Optimize Critic #\n",
+        "                ###################\n",
+        "\n",
         "                # Minimize the loss\n",
         "                self.critic_optimizer.zero_grad()\n",
         "                critic_loss.backward()\n",
@@ -810,6 +877,10 @@
         "                    # ---------------------------- update actor ---------------------------- #\n",
         "                    # Compute actor loss\n",
         "                    actor_loss = -self.critic.Q1(state, self.actor(state)).mean()\n",
+        "\n",
+        "                    ##################\n",
+        "                    # Optimize Actor #\n",
+        "                    ##################\n",
         "\n",
         "                    # Minimize the loss\n",
         "                    self.actor_optimizer.zero_grad()\n",
@@ -822,6 +893,18 @@
         "\n",
         "                average_critic_loss += critic_loss\n",
         "                average_actor_loss += actor_loss\n",
+        "\n",
+        "                # remove local variables and clear cache\n",
+        "\n",
+        "                del critic_loss\n",
+        "                del actor_loss\n",
+        "                del Q2_expected\n",
+        "                del Q1_expected\n",
+        "                del Q1_targets_next\n",
+        "                del Q2_targets_next\n",
+        "                del Q_targets\n",
+        "                # clear cache\n",
+        "                torch.cuda.empty_cache()\n",
         "\n",
         "            loss_critic = average_critic_loss / n_iteraion\n",
         "            loss_actor = average_actor_loss / n_iteraion\n",
@@ -852,7 +935,7 @@
         "\n",
         "    def load(self, filename) -> None:\n",
         "          \"\"\" Load the model \"\"\"\n",
-        "          self.critic.load_state_dict(torch.load(filename + \"_critic.pth\"))\n",
+        "          self.critic.load_state_dict(torch.load(filename + \"_critic.pth\")) # del torch.load\n",
         "          self.critic_optimizer.load_state_dict(torch.load(filename + \"_critic_optimizer.pth\"))\n",
         "          self.critic_target = copy.deepcopy(self.critic)\n",
         "\n",
@@ -1143,7 +1226,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "fc5b5010-7b8d-4089-de3e-17d8bc90d7cc"
+        "outputId": "fc5b5010-7b8d-4089-de3e-17d8bc90d7cc",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -1458,7 +1542,7 @@
         "pt4M5an2gPmn"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyOAiwjvwOMVTmdRgoZSrlVX",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1467,7 +1551,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
