--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -29,34 +29,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QdruBNVvMQ08",
-        "outputId": "9a47fb2e-c617-4f8e-ca57-1aaab50b2a1b"
+        "outputId": "19c3309d-749f-4913-e9ae-4a6442daf17e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Thu May 30 01:35:22 2024       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   41C    P8               9W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|  No running processes found                                                           |\n",
-            "+---------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ]
@@ -263,9 +244,9 @@
         "!pip install gymnasium\n",
         "!pip install gymnasium[box2d]\n",
         "\n",
-        "# !pip install torch\n",
-        "# !pip install matplotlib\n",
-        "# !pip install numpy\n",
+        "!pip install torch\n",
+        "!pip install matplotlib\n",
+        "!pip install numpy\n",
         "!pip install wandb"
       ]
     },
@@ -281,18 +262,14 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "\n",
         "# debug memory cuda\n",
         "os.environ[\"PYTORCH_NO_CUDA_MEMORY_CACHING\"] = \"1\"\n",
-        "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:128,garbage_collection_threshold:0.8\"\n",
-        "\n",
-        "torch.backends.cuda.matmul.allow_tf32 = True"
+        "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:128,garbage_collection_threshold:0.8\""
       ],
       "metadata": {
         "id": "jsiky7ygIE38"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -310,15 +287,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JjrS5wB7AOfA",
-        "outputId": "6dfcc66a-2f7b-4068-9c20-22e1f45d6ebd"
+        "outputId": "9b3ab0be-4d2d-4095-8f2a-ec53d5948aff"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch version: 2.3.0+cu121\n"
+            "torch version: 2.2.1+cu121\n"
           ]
         }
       ]
@@ -358,38 +335,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rFiWTJo9CzSf",
-        "outputId": "b0c1d2de-55b1-493b-b0fc-6c4a6e631974"
+        "outputId": "fbb9707c-3a52-4afb-b651-5bd8361a7eb5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "GPU name: Tesla_T4\n",
-            "GPU capability score: (7, 5)\n",
-            "GPU score lower than (8, 0), PyTorch 2.x speedup features will be limited (PyTorch 2.x speedups happen most on newer GPUs).\n",
-            "GPU information:\n",
-            "Thu May 30 01:40:08 2024       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P8               9W /  70W |      3MiB / 15360MiB |      0%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|  No running processes found                                                           |\n",
-            "+---------------------------------------------------------------------------------------+\n"
+            "PyTorch couldn't find a GPU, to leverage the best of PyTorch 2.0, you should connect to a GPU.\n"
           ]
         }
       ]
@@ -410,16 +364,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "13d_P3rnC1HJ",
-        "outputId": "5cb0be02-b3e4-4948-97b6-3f4e91a06f1f"
+        "outputId": "4aa4873b-253d-404c-8959-065b43a59d9c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total free GPU memory: 15.728 GB\n",
-            "Total GPU memory: 15.836 GB\n"
+            "Please check that you have an NVIDIA GPU and installed a driver from \n"
           ]
         }
       ]
@@ -437,35 +390,24 @@
         "    BATCH_SIZE = 32\n",
         "    print(f\"GPU memory available is {total_free_gpu_memory_gb} GB, using batch size of {BATCH_SIZE}\")\n",
         "except:\n",
-        "  BATCH_SIZE = 32 # minibatch size"
+        "  BATCH_SIZE = 32"
       ],
       "metadata": {
-        "id": "Y2qHR2UKDojx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "de233977-fca3-469a-973a-3ac7d0179ab8"
+        "id": "Y2qHR2UKDojx"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "GPU memory available is 15.728 GB, using batch size of 32\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "HH0qgyzCC1r7"
       },
       "outputs": [],
       "source": [
         "BUFFER_SIZE = int(1e5)  # replay buffer size\n",
+        "BATCH_SIZE = 100        # minibatch size\n",
         "GAMMA = 0.99            # discount factor\n",
         "TAU = 1e-3              # for soft update of target parameters\n",
         "LR_ACTOR = 1e-3         # learning rate of the actor\n",
@@ -511,6 +453,11 @@
         "            reward (np.float64): agent reward\n",
         "            next_state (np.ndarray): agent next_state\n",
         "        \"\"\"\n",
+        "\n",
+        "        assert isinstance(state, np.ndarray), \"State is not of data structure (np.ndarray) in REPLAY BUFFER -> state: {}.\".format(type(state))\n",
+        "        assert isinstance(action, np.ndarray), \"Action is not of data structure (np.ndarray) in REPLAY BUFFER -> action: {}.\".format(type(action))\n",
+        "        assert isinstance(next_state, np.ndarray), \"Next State is not of data structure (np.ndarray) in REPLAY BUFFER -> next state: {}.\".format(type(next_state))\n",
+        "\n",
         "        assert isinstance(state[0], np.float32), \"State is not of type (np.float32) in REPLAY BUFFER -> state type: {}.\".format(type(state))\n",
         "        assert isinstance(action[0], np.float32), \"Action is not of type (np.float32) in REPLAY BUFFER -> action type: {}.\".format(type(action))\n",
         "        assert isinstance(reward, (int, np.float64)), \"Reward is not of type (np.float64 / int) in REPLAY BUFFER -> reward: {}.\".format(type(reward))\n",
@@ -567,10 +514,23 @@
         "        return len(self.memory)"
       ],
       "metadata": {
-        "id": "Eqt5PjlK6aAQ"
+        "id": "Eqt5PjlK6aAQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6376e05e-1df5-44e8-d1fb-a708923513fb"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -583,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "O7pJLds6C4gq"
       },
@@ -619,7 +579,6 @@
         "        self.l3.weight.data.uniform_(-3e-3, 3e-3)\n",
         "\n",
         "    def forward(self, state) -> torch.Tensor:\n",
-        "\n",
         "\n",
         "        assert isinstance(state, torch.Tensor), \"State is not of type torch.Tensor in ACTOR.\"\n",
         "        assert state.dtype == torch.float32, \"Tensor elements are not of type torch.float32 in ACTOR.\"\n",
@@ -718,7 +677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "v3Cd3SiWC5Y5"
       },
@@ -935,7 +894,7 @@
         "\n",
         "    def load(self, filename) -> None:\n",
         "          \"\"\" Load the model \"\"\"\n",
-        "          self.critic.load_state_dict(torch.load(filename + \"_critic.pth\")) # del torch.load\n",
+        "          self.critic.load_state_dict(torch.load(filename + \"_critic.pth\"))\n",
         "          self.critic_optimizer.load_state_dict(torch.load(filename + \"_critic_optimizer.pth\"))\n",
         "          self.critic_target = copy.deepcopy(self.critic)\n",
         "\n",
@@ -1059,7 +1018,7 @@
     {
       "cell_type": "code",
       "source": [
-        "wandb.init(project=\"td3\") # fb372890f5180a16a9cd2df5b9558e55493cd16c"
+        "wandb.init(project=\"td3\")"
       ],
       "metadata": {
         "id": "d46eJqqklJvj",
@@ -1542,7 +1501,6 @@
         "pt4M5an2gPmn"
       ],
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1551,8 +1509,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
