create seed anything and init weights

--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -31,7 +31,7 @@
         "id": "QdruBNVvMQ08",
         "outputId": "336e2e4e-6a17-42de-c964-4761474d8a7d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "WyCXKmNNBq9H"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "7Qa_nNJfpVwX",
         "colab": {
@@ -203,7 +203,7 @@
         "id": "JjrS5wB7AOfA",
         "outputId": "b65dab25-5430-471b-ccef-7ec4f8cb3801"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "jsiky7ygIE38"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
         "id": "rFiWTJo9CzSf",
         "outputId": "300556bd-74be-4c43-a5c4-153e5a169882"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,7 @@
         "id": "13d_P3rnC1HJ",
         "outputId": "75a7e378-e26a-4bdf-e485-42179b6862fa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         },
         "outputId": "14b0b41f-0787-445d-9849-06e4d90116ac"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "HH0qgyzCC1r7"
       },
@@ -477,7 +477,7 @@
       "metadata": {
         "id": "Eqt5PjlK6aAQ"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "O7pJLds6C4gq"
       },
@@ -509,7 +509,6 @@
         "\n",
         "        self.max_action = max_action\n",
         "\n",
-        "        # Definir as camadas usando nn.Sequential\n",
         "        self.layers = nn.Sequential(\n",
         "            nn.Linear(state_size, l1),\n",
         "            nn.ReLU(),\n",
@@ -528,33 +527,38 @@
         "        action = self.max_action * torch.tanh(x)\n",
         "        return action\n",
         "\n",
+        "    def init_weights(self):\n",
+        "        for m in self.modules():\n",
+        "            if isinstance(m, nn.Linear):\n",
+        "                torch.nn.init.xavier_uniform_(m.weight) # Xavier initialization\n",
+        "                m.bias.data.fill_(0.01) # bias initialization\n",
+        "\n",
+        "\n",
         "class Critic(nn.Module):\n",
         "    def __init__(self, state_dim: int, action_dim: int, l1=400, l2=300):\n",
         "        super(Critic, self).__init__()\n",
         "\n",
         "        # Q1 architecture\n",
-        "        self.q1_layers = nn.Sequential(\n",
+        "        self.q1 = nn.Sequential(\n",
         "            nn.Linear(state_dim + action_dim, l1),\n",
         "            nn.ReLU(),\n",
         "            nn.Linear(l1, l2),\n",
         "            nn.ReLU(),\n",
-        "            nn.Linear(l2, l2)\n",
-        "        )\n",
-        "        self.q1_output = nn.Sequential(\n",
+        "            nn.Linear(l2, l2),\n",
         "            nn.Linear(l2, 1)\n",
         "        )\n",
         "\n",
         "        # Q2 architecture\n",
-        "        self.q2_layers = nn.Sequential(\n",
+        "        self.q2 = nn.Sequential(\n",
         "            nn.Linear(state_dim + action_dim, l1),\n",
         "            nn.ReLU(),\n",
         "            nn.Linear(l1, l2),\n",
         "            nn.ReLU(),\n",
-        "            nn.Linear(l2, l2)\n",
-        "        )\n",
-        "        self.q2_output = nn.Sequential(\n",
+        "            nn.Linear(l2, l2),\n",
         "            nn.Linear(l2, 1)\n",
         "        )\n",
+        "\n",
+        "        self.init_weights()\n",
         "\n",
         "    def forward(self, state: torch.Tensor, action: torch.Tensor) -> Tuple[torch.Tensor, torch.Tensor]:\n",
         "        # assert isinstance(state, torch.Tensor), \"State is not of type torch.Tensor in CRITIC.\"\n",
@@ -570,14 +574,12 @@
         "        s = torch.cat([state, action], dim=1)\n",
         "\n",
         "        # Q1 forward pass\n",
-        "        q1 = checkpoint_sequential(self.q1_layers, 2, s, use_reentrant=True)\n",
-        "        q1 = self.q1_output(q1)\n",
+        "        q1 = checkpoint_sequential(self.q1, 2, s, use_reentrant=True)\n",
         "\n",
         "        # Q2 forward pass\n",
-        "        q2 = checkpoint_sequential(self.q2_layers, 2, s, use_reentrant=True)\n",
-        "        q2 = self.q2_output(q2)\n",
+        "        q2 = checkpoint_sequential(self.q2, 2, s, use_reentrant=True)\n",
         "\n",
-        "        return (q1, q2)\n",
+        "        return q1, q2\n",
         "\n",
         "    def Q1(self, state: torch.Tensor, action: torch.Tensor) -> torch.Tensor:\n",
         "        # assert isinstance(state, torch.Tensor), \"State is not of type torch.Tensor in CRITIC.\"\n",
@@ -593,9 +595,14 @@
         "        s = torch.cat([state, action], dim=1)\n",
         "\n",
         "        # Q1 forward pass\n",
-        "        s1 = checkpoint_sequential(self.q1_layers, 2, s, use_reentrant=True)\n",
-        "        q1 = self.q1_output(s1)\n",
-        "        return q1"
+        "        s1 = checkpoint_sequential(self.q1, 2, s, use_reentrant=True)\n",
+        "        return q1\n",
+        "\n",
+        "    def init_weights(self):\n",
+        "        for m in self.modules():\n",
+        "            if isinstance(m, nn.Linear):\n",
+        "                torch.nn.init.xavier_uniform_(m.weight) # Xavier initialization\n",
+        "                m.bias.data.fill_(0.01) # bias initialization"
       ]
     },
     {
@@ -609,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "v3Cd3SiWC5Y5"
       },
@@ -931,13 +938,19 @@
         "        action = np.clip(action, low, high)\n",
         "        return action\n",
         "\n",
-        "    def seed(self, seed):\n",
+        "    def seed_anything(self, seed: int = 42):\n",
+        "        gym.logger.set_level(seed)\n",
         "        torch.manual_seed(seed)\n",
         "        np.random.seed(seed)\n",
+        "        random.seed(seed)\n",
         "\n",
-        "gym.logger.set_level(40)\n",
+        "        torch.cuda.manual_seed_all(seed)\n",
+        "        torch.backends.cudnn.deterministic = True\n",
+        "        torch.backends.cudnn.benchmark = False\n",
+        "\n",
+        "\n",
         "env = CustomWrapper(gym.make(\"BipedalWalker-v3\"),  min_action = -1.0,  max_action = 1.0)\n",
-        "env.seed(0)\n",
+        "env.seed_anything(42)\n",
         "\n",
         "agent = TD3Agent(state_size=env.observation_space.shape[0], \\\n",
         "                 action_size=env.action_space.shape[0], \\\n",
@@ -947,7 +960,7 @@
       "metadata": {
         "id": "YZNQsiSqciQ5"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +984,7 @@
         },
         "outputId": "a802672c-73e8-4419-d77b-1ea8ec3acd37"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "ERQ6QREQC99V",
         "colab": {
