--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -81,8 +81,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Notes**\n",
-        "* Use Apex ? -> memory"
+        "#### **Commit**\n",
+        "* *create seed anything and init weights Commits on Jun 4, 2024*"
       ],
       "metadata": {
         "id": "bQX-W5hEHOKv"
