--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -938,7 +938,7 @@
         "        action = np.clip(action, low, high)\n",
         "        return action\n",
         "\n",
-        "    def seed_anything(self, seed: int = 42):\n",
+        "    def seed_everything(self, seed: int = 42):\n",
         "        gym.logger.set_level(seed)\n",
         "        torch.manual_seed(seed)\n",
         "        np.random.seed(seed)\n",
@@ -950,7 +950,7 @@
         "\n",
         "\n",
         "env = CustomWrapper(gym.make(\"BipedalWalker-v3\"),  min_action = -1.0,  max_action = 1.0)\n",
-        "env.seed_anything(42)\n",
+        "env.seed_everything(42)\n",
         "\n",
         "agent = TD3Agent(state_size=env.observation_space.shape[0], \\\n",
         "                 action_size=env.action_space.shape[0], \\\n",
