--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -82,7 +82,7 @@
       "cell_type": "markdown",
       "source": [
         "#### **Commit**\n",
-        "* *add model train and compile on Jun 6, 2024*"
+        "* *update model train on Jun 6, 2024*"
       ],
       "metadata": {
         "id": "bQX-W5hEHOKv"
@@ -851,11 +851,10 @@
         "            self.critic.train()\n",
         "            self.actor.train()\n",
         "\n",
-        "            # Sample a batch of experiences\n",
-        "\n",
         "            loop = tqdm(range(n_iteration), total=n_iteration, leave=False)\n",
         "\n",
         "            for i in loop:\n",
+        "                # Sample a batch of experiences\n",
         "                state, action, reward, next_state, done = self.memory.sample()\n",
         "\n",
         "                action_ = action.cpu().numpy() # EXP: use detach ?\n",
