--- a/td3_official.ipynb
+++ b/td3_official.ipynb
@@ -82,7 +82,7 @@
       "cell_type": "markdown",
       "source": [
         "#### **Commit**\n",
-        "* *update model train on Jun 6, 2024*"
+        "* *update autocast with device and use amp on Jun 6, 2024*"
       ],
       "metadata": {
         "id": "bQX-W5hEHOKv"
@@ -882,7 +882,7 @@
         "                # Compute critic loss\n",
         "                self.critic_optimizer.zero_grad()\n",
         "\n",
-        "                with torch.cuda.amp.autocast(device_type='cuda', dtype=torch.float16):\n",
+        "                with torch.cuda.amp.autocast(device_type=device, dtype=torch.float16, enabled=use_amp):\n",
         "                  Q1_expected, Q2_expected = self.critic(state, action)\n",
         "                  critic_loss = F.mse_loss(Q1_expected, Q_targets) + F.mse_loss(Q2_expected, Q_targets)\n",
         "\n",
@@ -898,7 +898,7 @@
         "                    # Compute actor loss\n",
         "                    self.actor_optimizer.zero_grad()\n",
         "\n",
-        "                    with torch.cuda.amp.autocast(device_type='cuda', dtype=torch.float16):\n",
+        "                    with torch.cuda.amp.autocast(device_type=device, dtype=torch.float16, enabled=use_amp):\n",
         "                      actor_loss = -self.critic.Q1(state, self.actor(state)).mean()\n",
         "\n",
         "                    ##################\n",
